--- a/FrontEnd/autop/src/App.css
+++ b/FrontEnd/autop/src/App.css
@@ -90,3 +90,23 @@ footer {
 #navbar{
   max-height: 60px;
 }
+
+.Registration {
+  border: 2px solid #d3d3d3;
+  border-radius: .5em;
+  margin-bottom: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  padding: 1em;
+  text-align: left;
+  width: 600px;
+}
+
+.form {
+  padding: 1em;
+}
+
+label {
+  font-weight: 600;
+}
